# meta-sample-benchmark

./: .gitignore  .gitmodules  FAQ.md  JUDGE_AGENT_PROMPT.md  README.md  TICKET_GUIDELINES.md  claude.md  grader_agent_prompt.md  run.judge.sh  visualize_judgements.py
GeneratedSamples/: run.gemini.mcp.test.sh
GeneratedSamples/PremiumMediaSample/MCP/app/src/main/cpp/: CMakeLists.txt
GeneratedSamples/PremiumMediaSample/NO_MCP/app/src/main/cpp/: CMakeLists.txt
MCPGeminiPrompts/: GEMINI.md.MCP0  GEMINI.md.MCP1
judgements/: AnimationsSample.json  CustomComponentsSample.json  HybridSample.json  MediaPlayerSample.json  MixedRealitySample.json  MrukSample.json  Object3DSample.json  Object3DSampleIsdk.json  PhysicsSample.json  PremiumMediaSample.json  SpatialVideoSample.json  StarterSample.json  judgements_dashboard.html  (+1 more)
judgements-10-12/: AnimationsSample.json  CustomComponentsSample.json  HybridSample.json  MixedRealitySample.json  MrukSample.json  Object3DSample.json  Object3DSampleIsdk.json  PhysicsSample.json  PremiumMediaSample.json
judgements-10-13/: AnimationsSample.json  CustomComponentsSample.json  HybridSample.json  MixedRealitySample.json  MrukSample.json  Object3DSample.json  Object3DSampleIsdk.json  PhysicsSample.json  PremiumMediaSample.json  StarterSample.json
judgements-10-14/: AnimationsSample.json  CustomComponentsSample.json  HybridSample.json  MediaPlayerSample.json  MixedRealitySample.json  MrukSample.json  Object3DSample.json  Object3DSampleIsdk.json  PhysicsSample.json  PremiumMediaSample.json  StarterSample.json
(+802 files in other folders)
